2010-09-17  Yves Blusseau  <blusseau@zetam.org>

	* .bzrignore: *.d removed (old rule), add *.image and symlist.h.

2010-09-16  Yves Blusseau  <blusseau@zetam.org>

	* configure.ac: Avoid some annoying error messages if freetype-config
	program is not found.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	Support RAID on virtio devices, and others.

	* grub-core/kern/emu/getroot.c [__MINGW32__] (find_root_device):
	Rename to ...
	[__MINGW32__] (grub_find_device): ... this.
	[! __MINGW32__ && ! __CYGWIN__] (find_root_device): Rename to ...
	[! __MINGW32__ && ! __CYGWIN__] (grub_find_device): ... this.  Use a
	reasonable default if dir is NULL.
	[! __MINGW32__ && __CYGWIN__] (find_cygwin_root_device): Rename to
	...
	[! __MINGW32__ && __CYGWIN__] (grub_find_device): ... this.
	(grub_guess_root_device): Update callers.
	* include/grub/emu/getroot.h (grub_find_device): Add prototype.

	* util/raid.c (grub_util_getdiskname): Remove.
	(grub_util_raid_getmembers): Use grub_find_device rather than
	grub_util_getdiskname.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (serial): Remove obsolete comment about GRUB
	needing to be compiled with serial support.
	(ls): Indicate that multiple files are accepted.
	* grub-core/commands/ls.c (GRUB_MOD_INIT): Update help text to
	indicate that multiple files are accepted.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add *.1, *.8, grub-shell, grub-shell-tester,
	libgrub_a_init.c, and util/bash-completion.d/grub.

2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Fix incorrect container semantics.

2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/parttool.c (grub_cmd_parttool): Fix a variable
	misusage.
	Reported by: J. Nick Terry

2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Move embedding routines to partmap sources files.

	* grub-core/partmap/gpt.c (grub_gpt_partition_type_bios_boot)
	[GRUB_UTIL]: New variable.